refactor(#43): Changed some get(0) to getFirst